--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 </head>
 <body>
     <header id="cabecalho"><h1 id="titulo">Lições Aprendidas - Trybe</h1></header>
+</h1>
+</header>
+
+
+
+<img id="minha_foto" src="/Caminhada.png" alt="fotografia, Homem caminhando ao ar livre">
   
 </body>
 </html>
