adiciona lista aprendida

--- a/index.html
+++ b/index.html
@@ -16,6 +16,18 @@
 
 
 <img id="minha_foto" src="/Caminhada.png" alt="fotografia, Homem caminhando ao ar livre">
+<ol id="licoes_aprendidas">
+    <li>Fundamentos do desenvolvimento web</li>
+    <li>Unix</li>
+    <li>Shell</li>
+    <li>Bash</li>
+    <li>Git</H2></li>
+    <li>GitHub</li>
+    <li>Html</li>
+    <li>Css</li>
+    <li>Html Semantico</li>
+    <li>Internet</li>
+</ol>
   
 </body>
 </html>
