adiciona licoes a se aprender

--- a/index.html
+++ b/index.html
@@ -28,6 +28,19 @@
     <li>Html Semantico</li>
     <li>Internet</li>
 </ol>
+
+<ul id="licoes_a_aprender">
+    <li>Logica em Javascript</li>
+    <li>Comandos e Funcoes Javascript</li>
+    <li>Aprofundar Html e Css</li>
+    <li>Js, Dom,Eventos webstorage</li>
+    <li>React</li>
+    <li>API</li>
+    <li>Ciencia da Computacao</li>
+    <li>Front-End</li>
+    <li>Back-End</li>
+    <li>Phyton</li>
+</ul>
   
 </body>
 </html>
