adciona link externo

--- a/index.html
+++ b/index.html
@@ -41,6 +41,15 @@
     <li>Back-End</li>
     <li>Phyton</li>
 </ul>
+
+<a href="https://www.instagram.com/felipe.gallassi/" target=_blank alt="link do Instagram de Felipe Gallassi">
+
+</a>
+
+<footer id="rodape">
+
+</footer>
+
   
 </body>
 </html>
