--- a/index.html
+++ b/index.html
@@ -46,6 +46,12 @@
 
 </a>
 
+<article>
+    Estou aprendendo muito nesse comeco de curso da Trybe, por se tratar de uma area que eu nao tinha conhecimento nenhum
+    ainda esta um pouco confuso e assustador, porem tenho certeza que se continuar me empenhando conseguirei atingir meus
+    objetivos e poder e poder retribuir a Trybe me tornando um otimo profissional
+</article>
+
 <footer id="rodape">
 
 </footer>
