--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
     objetivos e poder e poder retribuir a Trybe me tornando um otimo profissional
 </article>
 
+<aside>
+    Meu aprendizado ate entao estava bem constante, porem de uns dias pra ca ka comecei a sentir as dificuldades do curso
+    e entendi que vou ter que me dedicar mais.
+</aside>
+
 <footer id="rodape">
 
 </footer>
