add nav e section

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 </h1>
 </header>
 
+<nav>
+    
+</nav>
+
 
 
 <img id="minha_foto" src="/Caminhada.png" alt="fotografia, Homem caminhando ao ar livre">
@@ -51,12 +55,12 @@
     ainda esta um pouco confuso e assustador, porem tenho certeza que se continuar me empenhando conseguirei atingir meus
     objetivos e poder e poder retribuir a Trybe me tornando um otimo profissional
 </article>
-
+<section>
 <aside>
     Meu aprendizado ate entao estava bem constante, porem de uns dias pra ca ka comecei a sentir as dificuldades do curso
     e entendi que vou ter que me dedicar mais.
 </aside>
-
+<section>
 <footer id="rodape">
 
 </footer>
