correcao do link

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
     <li>Phyton</li>
 </ul>
 
-<a href="https://www.instagram.com/felipe.gallassi/" target=_blank alt="link do Instagram de Felipe Gallassi">
+<a href="https://www.instagram.com/" target=_blank/>Instagram</a>
 
-</a>
+
 
 <article>
     Estou aprendendo muito nesse comeco de curso da Trybe, por se tratar de uma area que eu nao tinha conhecimento nenhum
