--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
 </h1>
 </header>
 
-<nav>
-    
-</nav>
+
 
 
 
@@ -46,8 +44,9 @@
     <li>Phyton</li>
 </ul>
 
-<a href="https://www.instagram.com/" target=_blank/>Instagram</a>
-
+<nav>
+    <a href="https://www.betrybe.com/" target="_blank">Betrybe</a>
+</nav>
 
 
 <article>
